# VoxelGameOld

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
Engine/: AcquireNode.cpp  Buffer.cpp  BufferWriter.cpp  CMakeLists.txt  Camera.cpp  CameraSystem.cpp  Clock.cpp  Engine.cpp  FreeListAllocator.cpp  Graphics.cpp  Image.cpp  Input.cpp  MemoryManager.cpp  Mesh.cpp  PresentNode.cpp  RenderGraph.cpp  RenderSystem.cpp  Renderer.cpp  System.cpp  TransferNode.cpp  UniformWriter.cpp  Utilities.cpp  Window.cpp  math.cpp
Engine/UI/: Canvas.cpp  Element.cpp  Label.cpp  LabelRenderer.cpp  Panel.cpp  PanelRenderer.cpp  Renderer.cpp  Transform.cpp  UINode.cpp
Engine/include/Engine/: BlockingQueue.h  Buffer.h  BufferWriter.h  BufferedQueue.h  Camera.h  CameraSystem.h  Clock.h  DirectedAcyclicGraph.h  Engine.h  FreeListAllocator.h  Graphics.h  Image.h  Input.h  MemoryManager.h  Mesh.h  RenderSystem.h  Renderer.h  System.h  UniformWriter.h  Utilities.h  Window.h  math.h
Engine/include/Engine/RenderGraph/: AcquireNode.h  PresentNode.h  RenderGraph.h  TransferNode.h
Engine/include/Engine/UI/: Canvas.h  Element.h  Label.h  LabelRenderer.h  Panel.h  PanelRenderer.h  Renderer.h  Transform.h  UINode.h
Game/: BlockManager.cpp  BlockManager.h  CMakeLists.txt  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  ChunkMesh.cpp  ChunkMesh.h  ChunkMesher.cpp  ChunkMesher.h  ChunkRenderer.cpp  ChunkRenderer.h  ChunkUpdater.cpp  ChunkUpdater.h  CompositorNode.cpp  CompositorNode.h  FrameRateCounter.cpp  FrameRateCounter.h  FreeCam.cpp  FreeCam.h  MeshManager.cpp  MeshManager.h  MipmapGenerator.cpp  MipmapGenerator.h  PriorityQueue.cpp  PriorityQueue.h  Renderer.cpp  Renderer.h  SelectionBox.cpp  SelectionBox.h  SkyboxManager.cpp  SkyboxManager.h  TerrainGenerator.cpp  TerrainGenerator.h  TextureManager.cpp  TextureManager.h  TriangleRenderer.cpp  TriangleRenderer.h  UIManager.cpp  (+5 more)
Game/shaders/: chunk.frag  chunk.vert  composite.frag  composite.vert  selection.frag  selection.vert  shader.frag  shader.vert  skybox.frag  skybox.vert  ui_panel.frag  ui_panel.vert
